Fixed issue where hangman still visible when starting new game. Added confetti animation for game won state.

--- a/src/styles.css
+++ b/src/styles.css
@@ -49,8 +49,8 @@ body {
   width: 100%;
   height: 100%;
   z-index: 100;
-  -webkit-transition: opacity 0.5s linear;
-  transition: opacity 0.5s linear;
+  -webkit-transition: opacity 0.7s linear;
+  transition: opacity 0.7s linear;
 }
 
 .black-screen.show {
